--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "express": "^4.14.0",
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
+        "lodash-es": "^4.17.15",
         "multer": "^1.3.0",
         "nodemailer": "^6.3.1",
         "react": "^16.9.0-alpha.0",
@@ -47,6 +48,7 @@
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.8",
         "redux-promise": "^0.5.3",
+        "serialize-javascript": "^2.1.2",
         "socket.io": "^2.2.0",
         "spiced-pg": "^1.0.0",
         "three": "^0.110.0",
